[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/EscQuit.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Floor.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Goal.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Level1.gd" type="Script" id=5]
[ext_resource path="res://scenes/Badguy.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/UI.tscn" type="PackedScene" id=7]

[node name="Level1" type="Node2D"]
script = ExtResource( 5 )

[node name="Lava" parent="." instance=ExtResource( 6 )]
position = Vector2( -208, 384 )
scale = Vector2( 70.04, 1 )

[node name="EscQuit" parent="." instance=ExtResource( 1 )]

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 104, 56 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true

[node name="Goal" parent="." instance=ExtResource( 4 )]
position = Vector2( 64, 328 )

[node name="FloorNodes" type="Node" parent="."]

[node name="Floor" parent="FloorNodes" instance=ExtResource( 3 )]
position = Vector2( 64, 128 )
scale = Vector2( 11.96, 1 )

[node name="Floor2" parent="FloorNodes" instance=ExtResource( 3 )]
position = Vector2( 256, 176 )
scale = Vector2( 11.96, 1 )

[node name="Floor3" parent="FloorNodes" instance=ExtResource( 3 )]
position = Vector2( 448, 224 )
scale = Vector2( 11.96, 1 )

[node name="Floor4" parent="FloorNodes" instance=ExtResource( 3 )]
position = Vector2( 255.36, 288 )
scale = Vector2( 11.96, 1 )

[node name="Floor5" parent="FloorNodes" instance=ExtResource( 3 )]
position = Vector2( 64, 344 )
scale = Vector2( 1.6, 1 )

[node name="Floor6" parent="FloorNodes" instance=ExtResource( 3 )]
position = Vector2( 128, 344 )
scale = Vector2( 1.6, 1 )

[node name="Floor7" parent="FloorNodes" instance=ExtResource( 3 )]
position = Vector2( 192, 344 )
scale = Vector2( 1.6, 1 )

[node name="UI" parent="." instance=ExtResource( 7 )]
[connection signal="body_entered" from="Lava" to="." method="_on_Lava_body_entered"]
[connection signal="body_entered" from="Goal" to="." method="_on_Goal_body_entered"]
[connection signal="quit" from="UI" to="." method="_on_UI_quit"]
[connection signal="try_again" from="UI" to="." method="_on_UI_try_again"]
